#pragma once
#include <string>
class Node {
public:
    virtual std::string print();
    virtual ~Node();
};